kubernetes/cluster-0/apps/downloads/nzbget/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app nzbget
  namespace: downloads
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Accept-Encoding "";
      sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.${SECRET_DOMAIN_PROXY}/css/base/nzbget/plex.css"></head>';
      sub_filter_once on;
spec:
  ingressClassName: ingress-nginx-int
  rules:
    - host: &host "nzbget.${SECRET_DOMAIN_PROXY}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 6789
  tls:
    - hosts:
        - *host
